--- a/websrc/css/publicStyle.css
+++ b/websrc/css/publicStyle.css
@@ -512,6 +512,7 @@
     width: 100%;
     position: relative;
     overflow: hidden;
+    padding-bottom: 10px;
 }
 
 .main-logo {
@@ -524,7 +525,7 @@
 }
 
 .circle-button-d {
-    padding: 20px 0;
+    padding: 40px 0 30px;
     position: relative;
 }
 
