--- a/websrc/layout/topTab.html
+++ b/websrc/layout/topTab.html
@@ -3,10 +3,10 @@
 
 <div class="top-tab menu background-color-f4Cf0a">
     <div class="top-left-info">
-        <a class="home top-tab-item display-flex-center" onclick="top.location.href='../index.html'">HOME</a>
+        <a class="home top-tab-item display-flex-center" onclick="top.location.href='../index.php'">HOME</a>
         <a class="profile top-tab-item display-flex-center" onclick="top.location.href='../profile.html'">PROFILE</a>
         <a class="library top-tab-item display-flex-center" onclick="top.location.href='../library.html'">LIBRARY</a>
-        <a class="events top-tab-item display-flex-center" onclick="top.location.href='../events.html'">EVENTS</a>
+        <a class="events top-tab-item display-flex-center" onclick="top.location.href='../events.php'">EVENTS</a>
     </div>
     <div class="top-right-info display-flex-center">
         <a onclick="top.location.href='../login.html'" class="loginBut">SIGN IN/ UP</a>
