--- a/websrc/css/publicStyle.css
+++ b/websrc/css/publicStyle.css
@@ -64,6 +64,10 @@
     width: 100%;
 }
 
+.w-50 {
+    width: 50%;
+}
+
 .h-100 {
     height: 100%;
 }
@@ -467,6 +471,24 @@
     color: #ffffff;
 }
 
+.library-last-right-item {
+    font-size: 20px;
+    color: black;
+    line-height: 40px;
+}
+
+.library-last-right-item .w-50 {
+    word-wrap: break-word;
+    word-break: normal;
+    padding: 30px 20px 0 20px;
+}
+
+.library-last-right-title {
+    font-size: 24px;
+    font-weight: 600;
+    text-align: center;
+}
+
 .library-info {
     padding: 10px 20px;
 }
@@ -499,13 +521,33 @@
 }
 
 .library-last-left-info {
-    width: 379px;
+    padding: 20px 15px;
+    width: 33%;
     height: 777px;
+    border-radius: 10px;
+    overflow-y: auto;
+}
+
+.library-last-left-item {
+    line-height: 50px;
+    font-size: 20px;
+    text-align: center;
+    position: relative;
+    margin-top: 10px;
+    border-radius: 10px;
+}
+
+.library-last-left-item > img {
+    position: absolute;
+    left: 10px;
+    top: calc(50% - 15px);
 }
 
 .library-last-right-info {
-    width: 873px;
-    height: 731px;
+    width: 66%;
+    height: 777px;
+    border-radius: 10px;
+    padding: 20px 0;
 }
 
 .index-top-d {
