--- a/websrc/layout/topTab.html
+++ b/websrc/layout/topTab.html
@@ -7,6 +7,7 @@
         <a class="profile top-tab-item display-flex-center" onclick="top.location.href='../profile.html'">PROFILE</a>
         <a class="library top-tab-item display-flex-center" onclick="top.location.href='../library.html'">LIBRARY</a>
         <a class="events top-tab-item display-flex-center" onclick="top.location.href='../events.php'">EVENTS</a>
+        <a class="about top-tab-item display-flex-center" onclick="top.location.href='../about.php'">ABOUT</a>
     </div>
     <div class="top-right-info display-flex-center">
         <a onclick="top.location.href='../login.html'" class="loginBut">SIGN IN/ UP</a>
