--- a/websrc/css/publicStyle.css
+++ b/websrc/css/publicStyle.css
@@ -174,6 +174,8 @@
     font-size: 24px;
 }
 
+
+
 .about-content {
     width: 100%;
     min-width: 1240px;
@@ -185,19 +187,27 @@
     position: absolute;
     left: 20px;
     top: calc(50% - 47px);
-    color: #ffffff;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    z-index: 10;
+    color: #000000;
 }
 
+.footer-left-info-about {
+    position: absolute;
+    left: 20px;
+    top: 1140px;
+    color: #ffffff;
+}
 
 .footer-right-info {
     position: absolute;
     right: 20px;
+    top: calc(50% - 61px);
+}
+
+.footer-right-info-about {
+    position: absolute;
+    right: 20px;
     top: 1130px;
-    
+
 }
 
 .footer-face {
@@ -205,12 +215,12 @@
     height: 119px;
 }
 
-.about-footer-face {
+.footer-face-about {
     width: 154px;
     height: 119px;
-    
 }
-.left-eye-footer {
+
+.left-eye-footer-about {
     width: 47px;
     height: 46px;
     background: rgb(255, 255, 255);
@@ -221,10 +231,32 @@
     z-index: 2;
 }
 
+.right-eye-footer-about {
+    width: 47px;
+    height: 46px;
+    background: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    z-index: 2;
+}
+
+.left-eye-footer {
+    width: 47px;
+    height: 46px;
+    background: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    z-index: 2;
+}
+
 .right-eye-footer {
     width: 47px;
     height: 46px;
-    background: rgb(255, 255, 255);
+    background: black;
     position: absolute;
     top: 0;
     right: 0;
@@ -233,6 +265,15 @@
 }
 
 .footer-noth {
+    width: 113px;
+    height: 53px;
+    position: absolute;
+    top: 19px;
+    left: 20px;
+    overflow: hidden;
+}
+
+.footer-noth-about {
     width: 113px;
     height: 53px;
     position: absolute;
@@ -264,7 +305,18 @@
 .footer-mouse {
     width: 108px;
     height: 99px;
-    background: rgb(255, 255, 255);
+    background: black;
+    position: absolute;
+    top: 20px;
+    left: 23px;
+    border-radius: 50%;
+    z-index: 0;
+}
+
+.footer-mouse-about {
+    width: 108px;
+    height: 99px;
+    background: white;
     position: absolute;
     top: 20px;
     left: 23px;
