--- a/websrc/css/login.css
+++ b/websrc/css/login.css
@@ -92,7 +92,7 @@ body {
     position: absolute;
     top: 483px;
     left: 213px;
-    font-family: 'IBM Plex Sans', sans-serif;;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-weight: Regular;
     font-size: 30px;
     opacity: 1;
