--- a/websrc/css/style.css
+++ b/websrc/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+
 body {
 	font-size: 14px;
 }
@@ -72,7 +74,7 @@ body {
 	position: absolute;
 	top: 15px;
 	left: 72px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 24px;
 	opacity: 1;
@@ -152,7 +154,7 @@ body {
 	position: absolute;
 	top: 15px;
 	left: 29px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 24px;
 	opacity: 1;
@@ -272,7 +274,7 @@ body {
 	position: absolute;
 	top: 32px;
 	left: 578px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 48px;
 	opacity: 1;
@@ -573,7 +575,7 @@ body {
 	position: absolute;
 	top: 14px;
 	left: 65px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 30px;
 	opacity: 1;
@@ -586,7 +588,7 @@ body {
 	position: absolute;
 	top: 424px;
 	left: 570px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 24px;
 	opacity: 1;
@@ -677,7 +679,7 @@ body {
 	position: absolute;
 	top: 15px;
 	left: 38px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 24px;
 	opacity: 1;
@@ -730,7 +732,7 @@ body {
 	position: absolute;
 	top: 15px;
 	left: 28px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 24px;
 	opacity: 1;
@@ -785,7 +787,7 @@ body {
 	position: absolute;
 	top: 15px;
 	left: 24px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 24px;
 	opacity: 1;
@@ -836,7 +838,7 @@ body {
 	position: absolute;
 	top: 15px;
 	left: 30px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 24px;
 	opacity: 1;
@@ -866,7 +868,7 @@ body {
 	position: absolute;
 	top: 12px;
 	left: 20px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 24px;
 	opacity: 1;
@@ -908,7 +910,7 @@ footer {
 	position: absolute;
 	top: 32px;
 	left: 45px;
-	font-family: JejuGothic;
+	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: Regular;
 	font-size: 24px;
 	opacity: 1;
