--- a/websrc/layout/footer.html
+++ b/websrc/layout/footer.html
@@ -1,5 +1,9 @@
 <link rel="stylesheet" href="../css/initialize.css">
 <link rel="stylesheet" href="../css/publicStyle.css">
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+
 <script type="text/javascript" src="../js/selectTab.js"></script>
 
 <div id="footer-content" class="footer-content">
