--- a/websrc/css/initialize.css
+++ b/websrc/css/initialize.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, blockquote, th, td {
     margin: 0;
     padding: 0;
@@ -8,7 +10,7 @@ body {
     background: #fff;
     color: #555;
     font-size: 14px;
-    font-family: "Microsoft YaHei", Arial, Helvetica, sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
 }
 
 td, th, caption {
