--- a/websrc/css/publicStyle.css
+++ b/websrc/css/publicStyle.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+
 /*public style*/
 .background-color-f4Cf0a {
     background-color: #F4CF0A;
