--- a/websrc/css/signin.css
+++ b/websrc/css/signin.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+
 .yellow-background {
     width: 100%;
     height: 666px;
@@ -39,7 +41,7 @@
     position: absolute;
     top: 140px;
     left: 522px;
-    font-family: JejuGothic;
+    font-family: 'IBM Plex Sans', sans-serif;;
     font-weight: Regular;
     font-size: 36px;
     opacity: 1;
@@ -52,7 +54,7 @@
     position: absolute;
     top: 274px;
     left: 234px;
-    font-family: JejuGothic;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-weight: Regular;
     font-size: 30px;
     opacity: 1;
@@ -65,7 +67,7 @@
     position: absolute;
     top: 352px;
     left: 323px;
-    font-family: JejuGothic;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-weight: Regular;
     font-size: 30px;
     opacity: 1;
@@ -101,7 +103,7 @@
     position: absolute;
     top: 14px;
     left: 1px;
-    font-family: JejuGothic;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-weight: Regular;
     font-size: 24px;
     opacity: 1;
@@ -114,7 +116,7 @@
     position: absolute;
     top: 755px;
     left: 584px;
-    font-family: JejuGothic;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-weight: Regular;
     font-size: 24px;
     opacity: 1;
@@ -151,7 +153,7 @@
     position: absolute;
     top: 687px;
     left: 593px;
-    font-family: JejuGothic;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-weight: Regular;
     font-size: 24px;
     opacity: 1;
@@ -164,7 +166,7 @@
     position: absolute;
     top: 544px;
     left: 593px;
-    font-family: JejuGothic;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-weight: Regular;
     font-size: 24px;
     opacity: 1;
@@ -177,7 +179,7 @@
     position: absolute;
     top: 600px;
     left: 486px;
-    font-family: JejuGothic;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-weight: Regular;
     font-size: 30px;
     opacity: 1;
