--- a/websrc/css/publicStyle.css
+++ b/websrc/css/publicStyle.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
-
 /*public style*/
 .background-color-f4Cf0a {
     background-color: #F4CF0A;
@@ -139,10 +137,6 @@
     background: rgba(255, 48, 48, 1);
 }
 
-.about {
-    background: rgb(0, 0, 0);
-}
-
 .top-left-info {
     display: flex;
     position: absolute;
@@ -166,19 +160,40 @@
     text-decoration: underline;
 }
 
+.top-right-sigin {
+    width: 357px;
+    height: 69px;
+    background: rgba(244, 206, 9, 1);
+    padding: 12px 20px;
+    margin: 10px;
+    opacity: 1;
+    position: absolute;
+    top: 21px;
+    left: 1060px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    overflow: hidden;
+}
+
+.top-right-signin-a {
+    width: 317px;
+    color: rgba(0, 0, 0, 1);
+    position: absolute;
+    top: 12px;
+    left: 20px;
+    font-family: JejuGothic;
+    font-weight: Regular;
+    font-size: 24px;
+    opacity: 1;
+    text-align: center;
+}
+
 /*======================================================================================================================*/
 
 /*footer style*/
 .footer-content {
-    width: 100%;
-    min-width: 1240px;
-    height: 196px;
-    font-size: 24px;
-}
-
-
-
-.about-content {
     width: 100%;
     min-width: 1240px;
     height: 196px;
@@ -192,56 +207,15 @@
     color: #000000;
 }
 
-.footer-left-info-about {
-    position: absolute;
-    left: 20px;
-    top: 2480px;
-    color: #ffffff;
-}
-
 .footer-right-info {
     position: absolute;
     right: 20px;
     top: calc(50% - 61px);
 }
 
-.footer-right-info-about {
-    position: absolute;
-    right: 20px;
-    top: 2480px;
-
-}
-
 .footer-face {
     width: 154px;
     height: 119px;
-}
-
-.footer-face-about {
-    width: 154px;
-    height: 119px;
-}
-
-.left-eye-footer-about {
-    width: 47px;
-    height: 46px;
-    background: rgb(255, 255, 255);
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 50%;
-    z-index: 2;
-}
-
-.right-eye-footer-about {
-    width: 47px;
-    height: 46px;
-    background: white;
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-radius: 50%;
-    z-index: 2;
 }
 
 .left-eye-footer {
@@ -275,26 +249,7 @@
     overflow: hidden;
 }
 
-.footer-noth-about {
-    width: 113px;
-    height: 53px;
-    position: absolute;
-    top: 19px;
-    left: 20px;
-    overflow: hidden;
-}
-
 .footer-botface {
-    width: 113px;
-    height: 53px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: 1;
-}
-
-.footer-botface-about {
     width: 113px;
     height: 53px;
     position: absolute;
@@ -308,17 +263,6 @@
     width: 108px;
     height: 99px;
     background: black;
-    position: absolute;
-    top: 20px;
-    left: 23px;
-    border-radius: 50%;
-    z-index: 0;
-}
-
-.footer-mouse-about {
-    width: 108px;
-    height: 99px;
-    background: white;
     position: absolute;
     top: 20px;
     left: 23px;
@@ -512,7 +456,7 @@
 
 .events-attended-info {
     margin: auto;
-    padding: 20px 0 20px 0;
+    padding: 20px 0 100px 0;
 }
 
 .events-attended-item {
@@ -739,21 +683,8 @@
 }
 
 .index-last-map {
-    padding: 20px 20px;
+    padding: 40px 20px;
     width: 100%;
-}
-.index-map {
-    padding: 0px 20px;
-    width: 100%;
-}
-
-.index-map img{
-    height: 1000px;
-    width: 1500px;
-}
-.index-last-map img{
-    height: 450px;
-    width: 1500px;
 }
 
 .sort-text {
@@ -853,16 +784,16 @@
 /*autoplay*/
 
 .carousel .wrapper {
-    width: 1500px;
-    height: 250px;
+    width: 1400px;
+    height: 350px;
     overflow: hidden;
     margin: 0 auto;
     position: relative;
 }
 
 .carousel .contain img {
-    width: 500px;
-    height: 250px;
+    width: 380px;
+    height: 350px;
     margin: 0 20px;
 }
 
@@ -872,6 +803,16 @@
     position: absolute;
     left: 0;
     top: 0;
+}
+
+.carousel .btn {
+    width: 1200px;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
+    left: calc(50% - 600px);
+    bottom: 32px;
 }
 
 .carousel .btn span {
